--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@fudge-ai/nextjs": "*",
+    "@fudge-ai/nextjs": "file:.yalc/@fudge-ai/nextjs",
     "@sentry/nextjs": "^6.18.2",
     "@tailwindcss/forms": "^0.3.2",
     "@types/cls-hooked": "^4.3.3",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
+    "@types/react": "^17.0.40",
     "typescript": "^4.6.2"
   }
 }
