--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -35,6 +35,7 @@
     "webpack": "^5.24.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@types/react": "^17.0.41",
     "typescript": "^4.6.2"
