--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@fudge-ai/nextjs": "^0.0.0-88f12d0",
     "@sentry/nextjs": "^6.18.2",
+    "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "@tailwindcss/forms": "^0.3.2",
     "@types/cls-hooked": "^4.3.3",
     "@types/continuation-local-storage": "^3.2.4",
