--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@fudge-ai/nextjs": "^0.0.0-88f12d0",
+    "@fudge-ai/nextjs": "^0.13.165",
     "@sentry/nextjs": "^6.18.2",
     "@sentry/react": "^6.19.6",
     "@sentry/tracing": "^6.19.6",
